# board_games_store

./: .env.sample  blog_fixture.json  pyproject.toml  store_fixture.json
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: add_articles.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_published.py  0003_alter_blog_views_count.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/blog/includes/: menu.html
config/: settings.py  urls.py
store/: admin.py  forms.py  models.py  urls.py  views.py
store/management/commands/: add_games.py
store/migrations/: 0001_initial.py  0002_alter_game_category.py
store/templates/store/: add_game.html  all.html  base.html  contacts.html  delete_game.html  for_adults.html  for_children.html  for_families.html  game_details.html  home.html
store/templates/store/includes/: menu.html
store/utils/: add_game_script.py
