[tool.poetry]
name = "board-games-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
ipython = "^8.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
